docs(docs-infra): fix docs pages overflow when specific example-viewer exists
enforce content to be fluid until a specific max width, and rollback breakpoints to be applied when 1430px is the current win size
as widths between 1430px and 1431px will be broken

--- a/adev/shared-docs/components/table-of-contents/table-of-contents.component.scss
+++ b/adev/shared-docs/components/table-of-contents/table-of-contents.component.scss
@@ -1,3 +1,5 @@
+@use '../../styles/media-queries' as mq;
+
 :host {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
     display: none;
   }
 
-  @media only screen and (max-width: 1430px) {
+  @include mq.for-large-desktop-down {
     position: relative;
     right: 0;
     max-height: min-content;
@@ -91,7 +93,7 @@ button {
     }
   }
 
-  @media only screen and (max-width: 1430px) {
+  @include mq.for-large-desktop-down {
     display: none;
   }
 }
